--- a/packages/cache-service/package.json
+++ b/packages/cache-service/package.json
@@ -5,7 +5,8 @@
   "repository": "https://github.com/ZachStoltz/wodly",
   "author": "Zach Stoltz <zach@stoltz.io>",
   "scripts": {
-    "start": "nodemon --experimental-modules app.mjs"
+    "start": "nodemon --experimental-modules app.mjs",
+    "test": "jest -b"
   },
   "private": true,
   "dependencies": {
