--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "concurrently \"npm run wds\" \"npm run start:server\"",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "wds": "react-scripts start",
     "start:server": "nodemon --experimental-modules server.mjs"
@@ -17,14 +17,16 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "material-ui": "^1.0.0-beta.18",
+    "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
+    "flow-bin": "0.57.3",
     "path": "^0.12.7"
   }
 }
