--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "lerna run test"
   },
   "devDependencies": {
-    "lerna": "^2.4.0"
+    "lerna": "^3.16.0"
+  },
+  "dependencies": {
+    "create-react-app": "^3.0.1"
   }
 }
