--- a/package.json
+++ b/package.json
@@ -8,10 +8,22 @@
   "scripts": {
     "test": "lerna run test"
   },
-  "devDependencies": {
-    "lerna": "3.16.4"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lerna run --concurrency 1 --stream precommit"
+    }
   },
-  "dependencies": {
-    "create-react-app": "3.0.1"
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "chalk": "^2.4.2",
+    "create-react-app": "^3.0.1",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^3.0.2",
+    "lerna": "^3.16.4",
+    "lint-staged": "^9.2.1",
+    "prettier": "1.18.2"
   }
 }
