--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,15 +5,24 @@
   "description": "Wodly's website",
   "repository": "https://github.com/coderockett/wodly",
   "author": "Zach Stoltz <zach@stoltz.io>",
-  "scripts": {
-    "start": "concurrently \"npm run wds\" \"npm run start:server\"",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "wds": "react-scripts start",
-    "start:server": "nodemon server.js"
-  },
   "proxy": "http://localhost:8080/",
+  "scripts": {
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged",
+    "start": "concurrently \"npm run wds\" \"npm run start:server\"",
+    "start:server": "nodemon server.js",
+    "test": "react-scripts test",
+    "wds": "react-scripts start"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add",
+      "jest --bail --findRelatedTests"
+    ]
+  },
   "dependencies": {
     "@material-ui/core": "4.2.1",
     "@material-ui/icons": "4.2.1",
@@ -24,7 +33,19 @@
     "react-scripts": "1.0.14"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.16",
+    "@types/node": "^12.6.9",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "concurrently": "4.1.1",
-    "path": "0.12.7"
+    "lint-staged": "^9.2.1",
+    "path": "0.12.7",
+    "typescript": "^3.5.3"
   }
 }
